fixed spacing issue with sign up modal

--- a/src/components/Authentication/SignUp.module.css
+++ b/src/components/Authentication/SignUp.module.css
@@ -1,20 +1,21 @@
+.modalEdit {
+  max-width: 40%;
+}
+
 .login {
-  /* display: block; */
   margin: auto;
   padding: 1rem;
   width: 35rem;
-  max-width: 95%;
-  margin-right: 1rem;
+  max-width: 100%;
+  border-radius: 12px;
   text-align: center;
   justify-content: center;
-  height: 35rem;
 }
 
 .signupControl h1 {
-  margin-top: 0;
   justify-content: center;
   text-align: center;
-  padding: 0;
+  padding-bottom: 24px;
 }
 
 .signupControl label {
@@ -33,25 +34,18 @@
   display: block;
   margin: auto;
   margin-bottom: 1.5rem;
-
-  /* max-width: 100%; */
 }
 
 .signupControl button {
   font: inherit;
+  font-size: large;
   cursor: pointer;
   padding: 1rem 2rem;
+  width: 20rem;
   border: 1px solid #74a5d3;
   background-color: #538df8;
   color: white;
-  border-radius: 12px;
-  width: 20rem;
-}
-
-.signupControl p {
-  /* margin-top: 8rem; */
-  cursor: pointer;
-  text-decoration-line: underline;
+  border-radius: 20px;
 }
 
 .signupControl button:hover,
@@ -60,9 +54,23 @@
   border-color: #510674;
 }
 
+.signupControl p {
+  margin-top: 2.5rem;
+  cursor: pointer;
+  text-decoration-line: underline;
+  margin-bottom: auto;
+}
+
 .closeButton {
   display: flex;
   flex-direction: column;
   margin-left: auto;
   max-width: 30px;
+}
+
+@media screen and (max-width: 540px) {
+  .login {
+    width: 100%;
+    left: 7%;
+  }
 }
